--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@types/pouchdb": "^6.4.0",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
+    "pouchdb": "^8.0.1",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@capacitor/cli": "4.7.1",
