fix for some bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,17 @@
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "useUnknownInCatchVariables": false,
-    "noImplicitReturns": false,
+    "noImplicitReturns": true,
     "strictNullChecks":false,
     "allowJs": true,
     "target": "esnext",
     "module": "esnext",
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
