--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
+    "@codetrix-studio/capacitor-google-auth": "^3.2.2",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@types/pouchdb": "^6.4.0",
+    "apexcharts": "^3.37.2",
+    "axios": "^1.3.4",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
     "pouchdb": "^8.0.1",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12",
-    "vue-virtual-scroller": "^2.0.0-beta.8"
+    "vue-virtual-scroller": "^2.0.0-beta.8",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@capacitor/cli": "4.7.1",
