--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^4.7.1",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.1",
+    "@capacitor/core": "^4.7.1",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "^4.7.1",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@codetrix-studio/capacitor-google-auth": "^3.2.2",
